<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nagtext">Fix your posture!</string>
    <string name="app_name">NagMe</string>
    <string name="continuebutton">OK</string>
    <string name="min">Minimum Time</string>
    <string name="max">Maximum Time</string>
    <string name="introtext">Welcome to Nagme!\nPlease enter the minimum and maximum times in minutes between nags</string>
    <string name="startbutton">Save and Start</string>
    <string name="stopbutton">Cancel Existing</string>
    <string name="cancel">Cancel</string>

</resources>